# SmileOrNot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: dokploy.md  training.md
docs/superpowers/plans/: 2026-04-27-smileornot.md  2026-05-06-canspector.md
docs/superpowers/specs/: 2026-04-27-smileornot-design.md  2026-05-06-canspector-design.md
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/src/components/: Navbar.astro
frontend/src/layouts/: Base.astro
frontend/src/pages/: can.astro  index.astro
frontend/src/scripts/: app.js  can.js  detector.js
frontend/src/styles/: styles.css
scripts/: 01_download_celeba.py  01b_extract_parquet.py  02_autolabel.py  03_split.py  can_01_download.py  can_02_remap.py  can_03_split.py  can_dataset.yaml  can_prep_local.py  dataset.yaml
smileornot/: __init__.py  app.py  inference.py
tests/: test_app.py  test_inference.py
