# Ultralytics 🚀 AGPL-3.0 License - https://ultralytics.com/license

# Overview:
# This pyproject.toml manages the build, packaging, and distribution of the SmileOrNot library.

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smileornot"
dynamic = ["version"]
description = "Live smile detection with YOLO26n + FastAPI + Astro"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["Ultralytics", "YOLO", "smile detection", "FastAPI", "computer vision"]
authors = [{ name = "Wai Phyo Aung" }]
maintainers = [{ name = "Wai Phyo Aung" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "ultralytics>=8.3",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
    "numpy",
    "roboflow>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/Waiphyoaung24/SmileOrNot"
"Source" = "https://github.com/Waiphyoaung24/SmileOrNot"
"Bug Reports" = "https://github.com/Waiphyoaung24/SmileOrNot/issues"

[tool.setuptools]
packages = { find = { where = ["."], include = ["smileornot", "smileornot.*"] } }

[tool.setuptools.dynamic]
version = { attr = "smileornot.__version__" }

[tool.pytest.ini_options]
addopts = "--durations=30 --color=yes"
norecursedirs = [".git", "dist", "build", "frontend", "data", "weights", ".worktrees"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["UP"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
ignore-words-list = "crate,nd,strack,dota,ane,segway,fo,gool,winn,commend"
skip = '*.csv,*venv*,docs/??/,docs/mkdocs_??.yml'
